--- a/3D_webApp/package.json
+++ b/3D_webApp/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.149.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "firebase": "^9.17.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
